--- a/Animal_Classification/animal_classifier.ipynb
+++ b/Animal_Classification/animal_classifier.ipynb
@@ -1,1 +1,144 @@
-
+{
+  "nbformat": 4,
+  "nbformat_minor": 0,
+  "metadata": {
+    "colab": {
+      "provenance": [],
+      "authorship_tag": "ABX9TyPuZJ+Zoq6KEVessFiVcTIE",
+      "include_colab_link": true
+    },
+    "kernelspec": {
+      "name": "python3",
+      "display_name": "Python 3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/vharshitha19/ML-PROJECTS/blob/main/Animal_Classification/animal_classifier.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 106
+        },
+        "id": "GZQj8HsDitN1",
+        "outputId": "29a32a86-228a-44b2-f63c-0eb15b78e6fa"
+      },
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "SyntaxError",
+          "evalue": "unterminated string literal (detected at line 12) (ipython-input-269676632.py, line 12)",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"/tmp/ipython-input-269676632.py\"\u001b[0;36m, line \u001b[0;32m12\u001b[0m\n\u001b[0;31m    dataset_path = r\"dataset_path = \"/content/drive/MyDrive/dataset\"\u001b[0m\n\u001b[0m                                                                   ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unterminated string literal (detected at line 12)\n"
+          ]
+        }
+      ],
+      "source": [
+        "import tensorflow as tf\n",
+        "from tensorflow.keras.preprocessing.image import ImageDataGenerator\n",
+        "from tensorflow.keras.applications import MobileNetV2\n",
+        "from tensorflow.keras.layers import Dense, GlobalAveragePooling2D\n",
+        "from tensorflow.keras.models import Model\n",
+        "from tensorflow.keras.preprocessing import image\n",
+        "import numpy as np\n",
+        "\n",
+        "# =============================\n",
+        "# YOUR DATASET PATH (ALREADY SET)\n",
+        "# =============================\n",
+        "dataset_path = r\"dataset_path = \"/content/drive/MyDrive/dataset\"\n",
+        "\n",
+        "# =============================\n",
+        "# SETTINGS\n",
+        "# =============================\n",
+        "img_size = (224, 224)\n",
+        "batch_size = 32\n",
+        "\n",
+        "# =============================\n",
+        "# LOAD DATA\n",
+        "# =============================\n",
+        "datagen = ImageDataGenerator(\n",
+        "    rescale=1./255,\n",
+        "    validation_split=0.2\n",
+        ")\n",
+        "\n",
+        "train_data = datagen.flow_from_directory(\n",
+        "    dataset_path,\n",
+        "    target_size=img_size,\n",
+        "    batch_size=batch_size,\n",
+        "    subset='training',\n",
+        "    class_mode='categorical'\n",
+        ")\n",
+        "\n",
+        "val_data = datagen.flow_from_directory(\n",
+        "    dataset_path,\n",
+        "    target_size=img_size,\n",
+        "    batch_size=batch_size,\n",
+        "    subset='validation',\n",
+        "    class_mode='categorical'\n",
+        ")\n",
+        "\n",
+        "class_names = list(train_data.class_indices.keys())\n",
+        "print(\"Detected Classes:\", class_names)\n",
+        "\n",
+        "# =============================\n",
+        "# MODEL (TRANSFER LEARNING)\n",
+        "# =============================\n",
+        "base_model = MobileNetV2(\n",
+        "    weights='imagenet',\n",
+        "    include_top=False,\n",
+        "    input_shape=(224,224,3)\n",
+        ")\n",
+        "\n",
+        "base_model.trainable = False\n",
+        "\n",
+        "x = base_model.output\n",
+        "x = GlobalAveragePooling2D()(x)\n",
+        "x = Dense(128, activation='relu')(x)\n",
+        "output = Dense(len(class_names), activation='softmax')(x)\n",
+        "\n",
+        "model = Model(inputs=base_model.input, outputs=output)\n",
+        "\n",
+        "model.compile(\n",
+        "    optimizer='adam',\n",
+        "    loss='categorical_crossentropy',\n",
+        "    metrics=['accuracy']\n",
+        ")\n",
+        "\n",
+        "model.summary()\n",
+        "\n",
+        "# =============================\n",
+        "# TRAIN MODEL\n",
+        "# =============================\n",
+        "model.fit(train_data, validation_data=val_data, epochs=10)\n",
+        "\n",
+        "# =============================\n",
+        "# TEST WITH ONE IMAGE\n",
+        "# =============================\n",
+        "test_image_path = r\"C:\\Users\\Admin\\Desktop\\harshitha\\um3\\test.jpg\"  # put any animal image here\n",
+        "\n",
+        "img = image.load_img(test_image_path, target_size=img_size)\n",
+        "img = image.img_to_array(img)\n",
+        "img = img / 255.0\n",
+        "img = np.expand_dims(img, axis=0)\n",
+        "\n",
+        "prediction = model.predict(img)\n",
+        "\n",
+        "print(\"Predicted Animal:\", class_names[np.argmax(prediction)])\n"
+      ]
+    }
+  ]
+}
