--- a/Fraud_Detection/fraud_detection.ipynb
+++ b/Fraud_Detection/fraud_detection.ipynb
@@ -1,1 +1,265 @@
-
+{
+  "nbformat": 4,
+  "nbformat_minor": 0,
+  "metadata": {
+    "colab": {
+      "provenance": [],
+      "authorship_tag": "ABX9TyPw6grqVH8duJlTtpA3LGLw",
+      "include_colab_link": true
+    },
+    "kernelspec": {
+      "name": "python3",
+      "display_name": "Python 3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/vharshitha19/ML-PROJECTS/blob/main/Fraud_Detection/fraud_detection.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "JSfJfgHvGU_k",
+        "outputId": "b1b98814-5d50-460b-9732-253a6f178799"
+      },
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Dataset shape: (1754155, 9)\n",
+            "   TRANSACTION_ID         TX_DATETIME CUSTOMER_ID TERMINAL_ID  TX_AMOUNT  \\\n",
+            "0          220747 2018-04-24 00:00:08        3853        8513      40.37   \n",
+            "1          220748 2018-04-24 00:01:00         723        1469      75.08   \n",
+            "2          220749 2018-04-24 00:01:20        3395        5545      30.04   \n",
+            "3          220750 2018-04-24 00:02:40         350        8902      92.20   \n",
+            "4          220751 2018-04-24 00:03:44        1348        6654      51.77   \n",
+            "\n",
+            "  TX_TIME_SECONDS TX_TIME_DAYS  TX_FRAUD  TX_FRAUD_SCENARIO  \n",
+            "0         1987208           23         0                  0  \n",
+            "1         1987260           23         0                  0  \n",
+            "2         1987280           23         0                  0  \n",
+            "3         1987360           23         1                  3  \n",
+            "4         1987424           23         0                  0  \n"
+          ]
+        }
+      ],
+      "source": [
+        "import pandas as pd\n",
+        "import os\n",
+        "\n",
+        "data_folder = \"data\"   # this folder came from your zip\n",
+        "\n",
+        "all_data = []\n",
+        "\n",
+        "for file in os.listdir(data_folder):\n",
+        "    if file.endswith(\".pkl\"):\n",
+        "        df = pd.read_pickle(os.path.join(data_folder, file))\n",
+        "        all_data.append(df)\n",
+        "\n",
+        "data = pd.concat(all_data, ignore_index=True)\n",
+        "\n",
+        "print(\"Dataset shape:\", data.shape)\n",
+        "print(data.head())\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Convert datetime column\n",
+        "data['TX_DATETIME'] = pd.to_datetime(data['TX_DATETIME'])\n",
+        "\n",
+        "# Create time features (helps fraud patterns)\n",
+        "data['hour'] = data['TX_DATETIME'].dt.hour\n",
+        "data['day'] = data['TX_DATETIME'].dt.day\n",
+        "data['month'] = data['TX_DATETIME'].dt.month\n",
+        "\n",
+        "# Drop original datetime\n",
+        "data.drop('TX_DATETIME', axis=1, inplace=True)\n",
+        "\n",
+        "print(data.head())\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "xLtqcZCqLJBL",
+        "outputId": "3f1adf73-5fa5-43be-cb41-c04505a5871e"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "   TRANSACTION_ID CUSTOMER_ID TERMINAL_ID  TX_AMOUNT TX_TIME_SECONDS  \\\n",
+            "0          220747        3853        8513      40.37         1987208   \n",
+            "1          220748         723        1469      75.08         1987260   \n",
+            "2          220749        3395        5545      30.04         1987280   \n",
+            "3          220750         350        8902      92.20         1987360   \n",
+            "4          220751        1348        6654      51.77         1987424   \n",
+            "\n",
+            "  TX_TIME_DAYS  TX_FRAUD  TX_FRAUD_SCENARIO  hour  day  month  \n",
+            "0           23         0                  0     0   24      4  \n",
+            "1           23         0                  0     0   24      4  \n",
+            "2           23         0                  0     0   24      4  \n",
+            "3           23         1                  3     0   24      4  \n",
+            "4           23         0                  0     0   24      4  \n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "X = data.drop('TX_FRAUD', axis=1)\n",
+        "# Ensure TX_DATETIME is removed if it's still present\n",
+        "if 'TX_DATETIME' in X.columns:\n",
+        "    X = X.drop('TX_DATETIME', axis=1)\n",
+        "y = data['TX_FRAUD']"
+      ],
+      "metadata": {
+        "id": "HMijsK8OLLMH"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.model_selection import train_test_split\n",
+        "\n",
+        "X_train, X_test, y_train, y_test = train_test_split(\n",
+        "    X, y, test_size=0.2, random_state=42, stratify=y\n",
+        ")\n"
+      ],
+      "metadata": {
+        "id": "aU8sQg6QLbNE"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.ensemble import RandomForestClassifier\n",
+        "\n",
+        "model = RandomForestClassifier(n_estimators=200, random_state=42)\n",
+        "model.fit(X_train, y_train)\n",
+        "\n",
+        "print(\"Model trained successfully!\")\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Q6mlgnBZLfen",
+        "outputId": "35d52456-5302-41de-8569-c906e46ab8a5"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Model trained successfully!\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.metrics import accuracy_score, classification_report\n",
+        "\n",
+        "y_pred = model.predict(X_test)\n",
+        "\n",
+        "print(\"Accuracy:\", accuracy_score(y_test, y_pred))\n",
+        "print(classification_report(y_test, y_pred))\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "tekE7K7vL1ES",
+        "outputId": "cc54289f-060a-4fe1-e525-462ec38d1dd6"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Accuracy: 1.0\n",
+            "              precision    recall  f1-score   support\n",
+            "\n",
+            "           0       1.00      1.00      1.00    347895\n",
+            "           1       1.00      1.00      1.00      2936\n",
+            "\n",
+            "    accuracy                           1.00    350831\n",
+            "   macro avg       1.00      1.00      1.00    350831\n",
+            "weighted avg       1.00      1.00      1.00    350831\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import pandas as pd\n",
+        "\n",
+        "new_transaction = pd.DataFrame([{\n",
+        "    'TRANSACTION_ID': 123456,\n",
+        "    'CUSTOMER_ID': 1000, # Added missing feature with a placeholder value\n",
+        "    'TERMINAL_ID': 300,\n",
+        "    'TX_AMOUNT': 50,\n",
+        "    'TX_TIME_SECONDS': 100000, # Added missing feature with a placeholder value\n",
+        "    'TX_TIME_DAYS': 10, # Added missing feature with a placeholder value\n",
+        "    'TX_FRAUD_SCENARIO': 0, # Added missing feature with a placeholder value\n",
+        "    'hour': 14,\n",
+        "    'day': 10,\n",
+        "    'month': 4\n",
+        "}])\n",
+        "\n",
+        "prediction = model.predict(new_transaction)\n",
+        "\n",
+        "if prediction[0] == 1:\n",
+        "    print(\"⚠ Fraud Transaction\")\n",
+        "else:\n",
+        "    print(\" Legit Transaction\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ND0shuGzL3hL",
+        "outputId": "f500d4f0-fbda-4e36-90b6-1bd903c1af63"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            " Legit Transaction\n"
+          ]
+        }
+      ]
+    }
+  ]
+}
